# actix-jrpc

./: Cargo.toml  README.md
src/: convention.rs  main.rs
src/core/: convention.rs  mod.rs  parse.rs
tests/: test_client.py
