[package]
name = "actix-jrpc"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

[dependencies]
bytes = "*"
env_logger = "*"
actix = "0.7"
actix-web = "0.7"
futures = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
json = "*"
log = "*"
tokio-core = "*"
tokio-codec = "*"
tokio-io = "*"
tokio-jsonrpc = "*"
